Updated grid classes to have gap for mobile now that cards no longer have margins by default.  Also removed card specific overrides from global.scss.

--- a/docroot/themes/custom/uids_base/scss/components/grid.scss
+++ b/docroot/themes/custom/uids_base/scss/components/grid.scss
@@ -56,6 +56,8 @@
 // Additional grid classes.
 .grid--fourcol--25 {
   .list-container__inner {
+    display: grid;
+    gap: $mobile-height-gutter;
     @include grid-base;
     @include breakpoint(md) {
       @include fourcol-grid;
