--- a/docroot/themes/custom/uids_base/scss/global.scss
+++ b/docroot/themes/custom/uids_base/scss/global.scss
@@ -568,24 +568,6 @@ body:not(.page-node-type-article, .page-node-type-page).layout-builder-disabled 
       .block + .block.block-margin__default--removed {
         margin-top: 0;
       }
-      // Override card margins.
-      .block.card--media-right,
-      .block.card--media-left,
-      .block +.block.card--media-right,
-      .block +.block.card--media-left {
-        margin-bottom: 0;
-      }
-    }
-  }
-}
-
-// Override card margins for layouts where
-// section padding has been removed and card margin was assumed.
-.layout__container[class*="section-padding__removed"] {
-  .layout__region {
-    .block.card--media-right:first-child:last-child,
-    .block.card--media-left:first-child:last-child {
-      margin-bottom: 1.6rem;
     }
   }
 }
